<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/about_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about_title"
        android:text="@string/about_meet"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dev_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/about_creator"
        android:layout_marginEnd="16dp"
        android:src="@drawable/dev_picture" />

    <TextView
        android:id="@+id/dev_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dev_picture"
        android:text="@string/dev_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/dev_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dev_name"
        android:text="@string/dev_mail"
        android:textSize="15sp"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/about_version"
        android:textSize="10sp"
        android:padding="5dp"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>